--- a/serverproduct/src/main/res/values/dimens.xml
+++ b/serverproduct/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-        <dimen name="maxtitle">30sp</dimen>
-        <dimen name="content"></dimen>
+    <dimen name="maxtitle">30sp</dimen>
+    <dimen name="content">14sp</dimen>
 </resources>
