--- a/manage/src/main/res/menu/menu_manage_resource.xml
+++ b/manage/src/main/res/menu/menu_manage_resource.xml
@@ -2,18 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/action_manage_resource_add_pesticide"
-        android:title="添加农药"
-        app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_manage_resource_add_fertilizer"
-        android:title="添加化肥"
-        app:showAsAction="never" />
+        android:id="@+id/action_manage_resource_update"
+        android:title="编辑"
+        app:showAsAction="always" />
 
     <item
-        android:id="@+id/action_manage_resource_add_seed"
-        android:title="添加种子"
-        app:showAsAction="never" />
+        android:id="@+id/action_manage_resource_save"
+        android:title="保存"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_manage_resource_delete"
+        android:title="删除"
+        app:showAsAction="always" />
+
 </menu>
