--- a/manage/src/main/res/layout/activity_manage_fertilizer_info.xml
+++ b/manage/src/main/res/layout/activity_manage_fertilizer_info.xml
@@ -27,10 +27,88 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/app_base_layout_background"
-        android:orientation="vertical"
         android:descendantFocusability="beforeDescendants"
+        android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+        <LinearLayout
+            android:id="@+id/manage_content_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:background="@color/app_base_item_background"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="5dp"
+                    android:gravity="center_vertical|left"
+                    android:text="登记证号"
+                    android:textColor="@color/app_base_text_title_1"
+                    android:textSize="16sp" />
+
+                <EditText
+                    android:id="@+id/manage_content_pid"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/app_base_edit_back_gray"
+                    android:inputType="text|textPhonetic"
+                    android:text="微生物肥（2017）临字（3900）号 "
+                    android:textColor="@color/app_base_text_title_2"
+                    android:textColorHint="@color/app_base_text_title_3"
+                    android:textSize="16sp" />
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@color/app_base_item_background"
+                android:gravity="center_vertical">
+
+                <Button
+                    android:id="@+id/manage_content_bt_query"
+                    android:layout_width="0dp"
+                    android:layout_height="36dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_shape_red"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:text="查询输入"
+                    android:textColor="@color/app_base_recycler_item_line"
+                    android:textSize="16sp" />
+
+                <Button
+                    android:id="@+id/manage_content_bt_manual"
+                    android:layout_width="0dp"
+                    android:layout_height="36dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_shape_red"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:text="手动输入"
+                    android:textColor="@color/app_base_recycler_item_line"
+                    android:textSize="16sp" />
+            </TableRow>
+
+        </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/manage_fertilizer_RecyclerView"
