--- a/manage/src/main/res/layout/adapter_manage_content_text.xml
+++ b/manage/src/main/res/layout/adapter_manage_content_text.xml
@@ -9,7 +9,8 @@
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
+        android:minHeight="50dp"
         android:gravity="center_vertical">
 
         <ImageView
