--- a/service/src/main/res/layout/adapter_service_manage_child.xml
+++ b/service/src/main/res/layout/adapter_service_manage_child.xml
@@ -39,9 +39,12 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            app:isOpen="false"
-            app:shape="circle"
-            app:themeColor="#EE5C42" />
+            app:kswBackDrawable="@drawable/miui_back_drawable"
+            app:kswBackMeasureRatio="2"
+            app:kswThumbDrawable="@drawable/miui_thumb_drawable"
+            app:kswThumbHeight="18dp"
+            app:kswThumbWidth="18dp"
+            android:enabled="false" />
 
     </TableRow>
     <View
