--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -18,6 +18,8 @@
         <item name="colorButtonNormal">@color/ui_btn_background_orange</item>
         <!--EditText 输入框中字体的颜色-->
         <item name="editTextColor">@android:color/white</item>
+        <!--Navigation icon颜色设置-->
+        <item name="drawerArrowStyle">@style/AppTheme.MyDrawerArrowStyle</item>
     </style>
 
     <!-- 用于开启滑动返回功能的 Activity -->
@@ -31,7 +33,26 @@
         <!--<item name="android:textColorPrimary">@color/app_base_text_title_1</item>-->
     </style>
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <!--<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />-->
+
+    <style name="AppTheme.PopupOverlay" parent="@style/ThemeOverlay.AppCompat.Dark">
+        <item name="android:colorBackground">#000000</item>
+        <item name="actionOverflowMenuStyle">@style/OverflowMenuStyle
+        </item> <!--新增一个item，用于控制menu-->
+    </style>
+
+    <style name="OverflowMenuStyle" parent="Widget.AppCompat.Light.PopupMenu.Overflow">
+        <item name="overlapAnchor">false</item>  <!--把该属性改为false即可使menu位置位于toolbar之下-->
+    </style>
+
+    <!--加入一個新的 navigation drarwer 的风格-->
+    <style name="AppTheme.MyDrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <!--将 spinBars 属性设定为 false-->
+        <item name="spinBars">false</item>
+        <!--设定 drawer arrow 的颜色-->
+        <item name="color">@android:color/white</item>
+    </style>
+
 
     <style name="LoadingDialog" parent="@android:style/Theme.Dialog">
         <!--Dialog的windowFrame框为无-->
