--- a/serverproduct/src/main/res/layout/policies_regulation_item.xml
+++ b/serverproduct/src/main/res/layout/policies_regulation_item.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:background="@color/white"
-    android:layout_height="match_parent">
+    android:id="@+id/serverproduct_polices_regulations_title_relativelayout"
+    android:background="@drawable/layout_click_selector"
+    android:layout_height="50dp">
     <TextView
         android:layout_marginRight="60dp"
         android:ellipsize="end"
         android:maxLines="1"
+        android:padding="5dp"
         android:id="@+id/serverproduct_polices_regulations_title_textview"
-        android:layout_marginLeft="5dp"
-        android:gravity="center"
-        android:layout_gravity="center_vertical"
+        android:layout_centerVertical="true"
         android:textSize="@dimen/title"
         android:textColor="@color/fontcolor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-</LinearLayout>
+</RelativeLayout>
