--- a/serverproduct/src/main/res/layout/activity_policies_regulations_detail.xml
+++ b/serverproduct/src/main/res/layout/activity_policies_regulations_detail.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/app_base_layout_background"
     android:orientation="vertical"
     android:theme="@style/AppTheme">
 
@@ -39,18 +40,17 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="15dp"
                 android:gravity="center"
-                android:text="暂无数据"
                 android:textColor="@color/toptitle"
                 android:textSize="@dimen/title" />
             <LinearLayout
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
                     android:id="@+id/serverproduct_policies_regulations_source_textview"
                     android:ellipsize="end"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:textColor="@color/fontcolor"
@@ -59,11 +59,11 @@
                     android:layout_marginLeft="15dp"
                     android:id="@+id/serverproduct_policies_regulations_publishdate_textview"
                     android:ellipsize="end"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:textColor="@color/fontcolor"
-                    android:textSize="@dimen/title" />
+                    android:textSize="@dimen/content" />
             </LinearLayout>
             <TextView
                 android:id="@+id/serverproduct_policies_regulations_content_textview"
@@ -71,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/contentbg"
                 android:lineSpacingExtra="2dp"
-                android:padding="20dp"
+                android:padding="5dp"
                 android:textColor="@color/textfont"
                 android:textSize="@dimen/content" />
         </LinearLayout>
