--- a/serverproduct/src/main/res/layout/activity_dynamic_price_detail.xml
+++ b/serverproduct/src/main/res/layout/activity_dynamic_price_detail.xml
@@ -6,28 +6,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.design.widget.AppBarLayout
-        android:background="@color/toptitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/toptitle"
         android:theme="@style/AppTheme.AppBarOverlay">
+
         <android.support.v7.widget.Toolbar
-            android:id="@+id/serverproduct_tendayreporting_toolbar"
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/app_base_bar_background"
             app:contentInsetLeft="0dp"
             app:contentInsetStart="0dp"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
-        </android.support.v7.widget.Toolbar>
+            app:popupTheme="@style/AppTheme.PopupOverlay"></android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
-    <com.erayic.agr.common.view.PagerSlidingTabStrip
-        android:background="@color/white"
-        android:id="@+id/serverproduct_tendayreporting_resource_tab"
-        android:layout_width="match_parent"
-        android:layout_height="48dip"
-        app:pstsShouldExpand="true" />
     <android.support.v4.view.ViewPager
-        android:id="@+id/serverproduct_tendayreporting_content_viewpager"
+        android:id="@+id/serverproduct_dynamic_price_detail_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 </LinearLayout>
