--- a/serverproduct/src/main/res/layout/activity_forecast_reporting.xml
+++ b/serverproduct/src/main/res/layout/activity_forecast_reporting.xml
@@ -23,7 +23,20 @@
 
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
+    <ScrollView
+        android:scrollbars="none"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+    <LinearLayout
+        android:id="@+id/serverproduct_reporting_base_linearlayout"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -92,6 +105,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:orientation="horizontal">
@@ -120,6 +134,41 @@
                     <TextView
                         android:maxLines="1"
                         android:id="@+id/serverproduct_hum_valuetext"
+                        android:layout_width="wrap_content"
+                        android:layout_height="20dp"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/content" />
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/serverproduct_wind_wind_imageview"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/image_serverproduct_wind_icon" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="3dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:maxLines="1"
+                        android:id="@+id/serverproduct_wind_titletext"
+                        android:layout_width="wrap_content"
+                        android:layout_height="20dp"
+                        android:text="风力"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/content" />
+
+                    <TextView
+                        android:maxLines="1"
+                        android:id="@+id/serverproduct_wind_valuetext"
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
                         android:textColor="@color/white"
@@ -335,4 +384,84 @@
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:background="@color/cyan"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="30dp">
+            <TextView
+                android:layout_gravity="center"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:textColor="@color/white"
+                android:textSize="@dimen/title"
+                android:text="未来24小时天气详情"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:background="@color/white"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="30dp">
+            <TextView
+                android:layout_marginLeft="10dp"
+                android:text="日期"
+                android:maxLines="3"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:textColor="@color/fontcolor"
+                android:textSize="@dimen/content"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="风力(级)"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:textColor="@color/fontcolor"
+                android:textSize="@dimen/content"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_marginRight="10dp"
+                android:text="温度(℃)"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:gravity="center"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:textColor="@color/fontcolor"
+                android:textSize="@dimen/content"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_marginRight="10dp"
+                android:text="雨量(ml)"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:gravity="center"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:textColor="@color/fontcolor"
+                android:textSize="@dimen/content"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <com.erayic.agr.serverproduct.view.custom.ScrollListView
+            android:divider="@color/transparent"
+            android:id="@+id/serverproduct_reporting_listview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
