--- a/serverproduct/src/main/res/layout/dynamic_prices_childitem.xml
+++ b/serverproduct/src/main/res/layout/dynamic_prices_childitem.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:background="@color/white"
-    android:layout_height="wrap_content">
+    android:background="@drawable/layout_click_selector"
+    android:layout_height="50dp">
             <LinearLayout
+                android:layout_gravity="center_vertical"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="30dp">
+                android:layout_height="50dp">
                 <TextView
                     android:ellipsize="end"
                     android:maxLines="1"
-                    android:layout_weight="3"
+                    android:layout_weight="2"
                     android:layout_gravity="center_vertical"
                     android:gravity="center"
                     android:id="@+id/serverproduct_dynamic_price_item_date_textview"
@@ -21,22 +22,17 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" />
                 <TextView
-                    android:ellipsize="end"
-                    android:maxLines="1"
                     android:layout_weight="5"
-                    android:layout_gravity="center_vertical"
-                    android:gravity="center_vertical"
                     android:id="@+id/serverproduct_dynamic_price_item_market_textview"
                     android:textColor="@color/textfont"
                     android:textSize="@dimen/content"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" />
                 <TextView
-                    android:ellipsize="end"
                     android:maxLines="1"
                     android:gravity="center"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="3"
+                    android:layout_weight="2"
                     android:id="@+id/serverproduct_dynamic_price_item_pricevalue_textview"
                     android:textColor="@color/textfont"
                     android:textSize="@dimen/content"
