--- a/serverproduct/src/main/res/layout/policies_regulation_item.xml
+++ b/serverproduct/src/main/res/layout/policies_regulation_item.xml
@@ -11,7 +11,7 @@
         android:padding="5dp"
         android:id="@+id/serverproduct_polices_regulations_title_textview"
         android:layout_centerVertical="true"
-        android:textSize="@dimen/title"
+        android:textSize="@dimen/content"
         android:textColor="@color/fontcolor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
